--- a/index.html
+++ b/index.html
@@ -363,13 +363,13 @@
 <script>
   // Smart product image loader (images in same folder as index.html)
 const sections = [
-  {id:'cakes', prefix:'cake'},
-  {id:'cookies', prefix:'cookie'},
-  {id:'cupcakes', prefix:'cupcake'},
-  {id:'cakes-cookies', prefix:'cake-cookie'},
-  {id:'cake-pops', prefix:'cakepop'},
-  {id:'dessert-jars', prefix:'dessert'},
-  {id:'kids-baking', prefix:'kids-baking'}
+  {id:'cakes', prefix:'Cake'},
+  {id:'cookies', prefix:'Cookies'},
+  {id:'cupcakes', prefix:'Cupcake'},
+  {id:'cakes-cookies', prefix:'Cake&Cookies'},
+  {id:'cake-pops', prefix:'CakePops'},
+  {id:'dessert-jars', prefix:'DessertJars'},
+  {id:'kids-baking', prefix:'Class'}
 ];
 
 sections.forEach(section => {
