--- a/index.html
+++ b/index.html
@@ -361,32 +361,41 @@
 </div>
 
 <script>
-  // Smart product image loader (images in same folder as index.html)
-const sections = [
-  {id:'cakes', prefix:'Cake'},
-  {id:'cookies', prefix:'Cookies'},
-  {id:'cupcakes', prefix:'Cupcake'},
-  {id:'cakes-cookies', prefix:'Cake&Cookies'},
-  {id:'cake-pops', prefix:'CakePops'},
-  {id:'dessert-jars', prefix:'DessertJars'},
-  {id:'kids-baking', prefix:'Class'}
-];
+  // Smart product image loader (images in "main/" folder)
+  const sections = [
+    {id:'cakes', prefix:'Cake'},
+    {id:'cookies', prefix:'Cookies'},
+    {id:'cupcakes', prefix:'Cupcake'},
+    {id:'cakes-cookies', prefix:'Cake&Cookies'},
+    {id:'cake-pops', prefix:'CakePops'},
+    {id:'dessert-jars', prefix:'DessertJars'},
+    {id:'kids-baking', prefix:'Class'}
+  ];
 
-sections.forEach(section => {
-  const container = document.getElementById(`${section.id}-grid`);
-  for(let i = 1; i <= 5; i++){
-    const imgPath = `${section.prefix}${i}.jpg`; // removed "main/" folder
-    const img = new Image();
-    img.src = imgPath;
-    img.onload = () => {
-      const card = document.createElement('div');
-      card.className = 'product-card';
-      card.innerHTML = `<img src="${imgPath}" alt="${section.prefix} ${i}" />`;
-      container.appendChild(card);
-    };
-    img.onerror = () => {}; // skip missing images
-  }
-});
+  sections.forEach(section => {
+    const container = document.getElementById(`${section.id}-grid`);
+    let missingCount = 0;
+
+    for(let i = 1; i <= 20; i++){   // check up to 20
+      if(missingCount >= 5) break; // stop if 5 in a row missing
+      const imgPath = `main/${section.prefix}${i}.jpg`; // ✅ restored "main/"
+
+      const img = new Image();
+      img.src = imgPath;
+
+      img.onload = () => {
+        missingCount = 0; // reset if found
+        const card = document.createElement('div');
+        card.className = 'product-card';
+        card.innerHTML = `<img src="${imgPath}" alt="${section.prefix} ${i}" />`;
+        container.appendChild(card);
+      };
+
+      img.onerror = () => { missingCount++; };
+    }
+  });
+  
+</script>
 
   // WhatsApp modal functionality
   const whatsappBtn = document.getElementById('whatsappBtn');
