--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
     sections.forEach(section => {
       const container = document.getElementById(`${section.id}-grid`);
       for(let i = 1; i <= 50; i++){
-        const imgPath = `main/${section.prefix}${i}.jpg`;
+        const imgPath = `${section.prefix}${i}.jpg`;
         const img = new Image();
         img.src = imgPath;
         img.onload = () => {
